extensions, and hides some of the messy plumbing needed to get Python to
talk to the WMI API. It's pure Python and should work with any version of
Python from 2.1 onwards (list comprehensions) and any recent version of
pywin32.


Where do I get it?
==================

http://timgolden.me.uk/python/wmi.html


What's Changed?
===============

27th Dec 2007 1.3.2  . Squashed long-standing cached method bug which had 
                       resulted in an instance-level method being called even
                       after that instance had died.
                     . Added code from Igor Dvorkin to support IPython's
                       getAttribute protocol.
11th Apr 2007 1.3.1  . Added positional params for methods
                     . Intrinsic event watchers default to "modification"
                     . New _wmi_event object returned from event watchers
                     . A directly-instantiated class determines its own namespace
8th Feb 2007  1.3    . Added support for extrinsic events
28th Dec 2006 1.2.1  . Corrected problem with Event watcher reported by Charlie Taylor
                     . First steps towards pythondoc-style docstrings
8th Oct 2006  1.2    . Improved performance by lazy lookups and cached values
                       for both properties and methods.
                       Allow a list of fields to be selected instead of the
                       entire class properties.
                       Added code supplied by Paul Tiemann offers a lightweight
                       data-only version of the wmi query. This is useful where
                       real-time repeated data is required which should interfere
                       as little as possible with the host machine.
                       Code now compatible with Python v2.0.
30th Sep 2006 1.2a   . Cosmetic changes
                       _wmi_namespace.classes is now a dict, and acts as a cache